force-app/main/default/objects/Master_Resume__c/Master_Resume__c.object-meta.xml
<CustomObject>
    <label>Master Resume</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Resumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>