force-app/main/default/objects/Master_Resume__c/fields/Credential_Id__c.field-meta.xml
<CustomField>
    <fullName>Credential_Id__c</fullName>
    <label>Credential ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>