force-app/main/default/objects/Master_Resume__c/fields/Currently_in_the_Role__c.field-meta.xml
<CustomField>
    <fullName>Currently_in_the_Role__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently in the Role</label>
    <type>Checkbox</type>
</CustomField>