force-app/main/default/objects/Master_Resume__c/fields/Field_Of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_Of_Study__c</fullName>
    <label>Field Of Study</label>
    <length>100</length>
    <type>Text</type>
</CustomField>