force-app/main/default/objects/Master_Resume__c/fields/Job_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Location_Type__c</fullName>
    <label>Job Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-site</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>