force-app/main/default/objects/Master_Resume__c/fields/No_Expiry__c.field-meta.xml
<CustomField>
    <fullName>No_Expiry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Expiry</label>
    <type>Checkbox</type>
</CustomField>