force-app/main/default/objects/Master_Resume__c/fields/Organization__c.field-meta.xml
<CustomField>
    <fullName>Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Master Resumes</relationshipLabel>
    <relationshipName>Master_Resumes</relationshipName>
    <type>Lookup</type>
</CustomField>