force-app/main/default/objects/Master_Resume__c/fields/Reference_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reference_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reference Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Master Resumes</relationshipLabel>
    <relationshipName>Master_Resumes</relationshipName>
    <type>Lookup</type>
</CustomField>