force-app/main/default/objects/Master_Resume__c/recordTypes/Award.recordType-meta.xml
<RecordType>
    <fullName>Award</fullName>
    <active>true</active>
    <label>Award</label>
</RecordType>