force-app/main/default/objects/Master_Resume__c/recordTypes/Certification.recordType-meta.xml
<RecordType>
    <fullName>Certification</fullName>
    <active>true</active>
    <label>Certification</label>
</RecordType>