force-app/main/default/objects/Master_Resume__c/recordTypes/Experience.recordType-meta.xml
<RecordType>
    <fullName>Experience</fullName>
    <active>true</active>
    <label>Experience</label>
</RecordType>