force-app/main/default/objects/Master_Resume__c/recordTypes/Recognition.recordType-meta.xml
<RecordType>
    <fullName>Recognition</fullName>
    <active>true</active>
    <label>Recognition</label>
</RecordType>