force-app/main/default/objects/Master_Resume__c/recordTypes/Reference.recordType-meta.xml
<RecordType>
    <fullName>Reference</fullName>
    <active>true</active>
    <label>Reference</label>
</RecordType>