force-app/main/default/objects/Master_Resume__c/recordTypes/Summary.recordType-meta.xml
<RecordType>
    <fullName>Summary</fullName>
    <active>true</active>
    <label>Summary</label>
</RecordType>