force-app/main/default/objects/Master_Resume__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Organization__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Currently_in_the_Role__c</columns>
    <columns>End_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Job_Location_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Master_Resume__c.Experience</value>
    </filters>
    <label>All</label>
</ListView>